gitops/apps/taskchampion-sync-server/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: taskchampion
  labels:
    app.kubernetes.io/name: taskchampion-sync-server
